ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: secpoc
  labels:
    istio-injection: enabled
    networking/namespace: secpoc


---
apiVersion: v1
kind: Namespace
metadata:
  name: altsecpoc
  labels:
    istio-injection: enabled
    networking/namespace: altsecpoc
