egress-gw-rules.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - api.ipify.org
    tls:
      mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: egressgateway-for-ipify
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: ipify

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: direct-ipify-through-egress-gateway
spec:
  hosts:
  - api.ipify.org
  gateways:
  - mesh
  - istio-egressgateway
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - api.ipify.org
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: ipify
        port:
          number: 443
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
      sniHosts:
      - api.ipify.org
    route:
    - destination:
        host: api.ipify.org
        port:
          number: 443
      weight: 100
